# rzd_detector

./: .gitattributes  .gitignore  License  README.md  audio_speech_emotion_detect.ipynb  environment.yaml  environment.yml  main_text.txt  newfile  piworker.py  post_start.py  pre_start.py  pyproject.toml  reqs.txt  requirements.txt  rpi-updater.py
Lib/: __init__.py
Lib/codemodules/face/pulse/: pulse.py  pulse_test_script copy.ipynb
Lib/codemodules/voice/intonation/: usage_example.ipynb
Lib/codemodules/voice/pitch/: proto2.py  voice_pitch_detector_proto.ipynb
Scripts/: main.py  table_values.json  testerm.ipynb  write_video.py
Scripts/devtools/labellingtool/: labeller2.py
Scripts/install_scripts/: postinstall.py  preinstall.py
Scripts/test_files/: test.json  test.py
Scripts/test_files/common/: 5.mov
Scripts/test_files/pulse/: calm68.webm
_docs/epub/: .buildinfo  HumanStateDetection.epub  content.opf  genindex.xhtml  index.xhtml  main.xhtml  nav.xhtml  server.xhtml  toc.ncx
_docs/epub/_static/: documentation_options.js
_docs/html/: .buildinfo  genindex.html  index.html  main.html  objects.inv  search.html  searchindex.js  server.html
_docs/html/_sources/: index.rst.txt  main.rst.txt  server.rst.txt
_docs/html/_static/: documentation_options.js  language_data.js
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/files_info/: fer_test.py  ПОД_КАМЕРУ.SLDPRT  ПОД_КАМЕРУ_НИЗ.SLDPRT
docs/notebooks/: Proto_extrapolate.ipynb  opencv_stream_view.py  pulse_test_script.ipynb
extra/files_info/: all_text.txt  fer_test.py
face_module/: pulse_test_script.ipynb
gui/: readme.md
gui/dev/: index.html
gui/dev/mobile/: index.html  old_index.html  script_mobile.js
gui/dev/web-server/: gui_controller.py  index.html  webserver.py
gui/dev/web-server/microphone_loader/: server.py
gui/dev/web-server/microphone_loader/www/: handler.js  index.html  main.js
gui/dev/web-server/package/: handler.js  mycharts.js  styles_mobile.css
gui/dev/web-server/static/js/: main.js
gui/dev/web-server/templates/: ind2.html  index.html
gui/laborad_detector/: desktop.html  index.html  info.html  linear.html  mobile.html  readme.md  tablet.html
gui/laborad_detector/resources/: script.js  scriptMobile.js  scriptTablet.js  styles.css  stylesTablet.css
gui/laborad_detector/resources/css/: linear.css  mobile.css
gui/laborad_detector/resources/js/: desktop.js  index.js  linear.js  mobile.js  oldjs.js
gui/main_page/: index.html
gui/main_page/css/: style.css
gui/mobileVideo/: index.html
gui/revised_2025/: 1.py  count_statistical.py  demo copy.py  demo.py  events.py  run_blinking.py  run_emotions.py  run_moduls.py  run_pulse.py  run_resp.py  server.py  users.json  write_video.py
gui/revised_2025/static/: script.js  scripts.js
gui/revised_2025/static/css/: desktop.css  linear.css  mobile.css  tablet.css
gui/revised_2025/static/js/: mobile.js  script.js  scripts.js
gui/revised_2025/templates/: auth.html  desktop.html  index.html  linear.html  mobile.html  report.html  script.js  tablet.html  test.html
materials/files_info/: fer_test.py.old  main_text.txt  presentation_proto
materials/notebooks/: 0best_model.pth  PersonDetection_usage_.ipynb  dev_GIN_1.py  dev_GIN_2.py  extremums.ipynb  opencv_stream_view.py  pulse_test_script copy.ipynb
rpi/: README.md  picamera_streamer.py  piworker.py
rpi/pycontrol/: deploy.py  devices.toml  inventory.py  raspberry_setup.py
rpi/pycontrol/files/: github_monitor.py  github_monitor.service  piworker.py  pre_start.py  rpi-updater.py
rpi/pycontrol/files/templates/: piworker.service.j2  rpi-updater.service.j2
runs/detect/train/: args.yaml  events.out.tfevents.1737662702.DESKTOP-MNJKRSQ.7752.0
runs/detect/train2/: args.yaml  events.out.tfevents.1737926213.DESKTOP-MNJKRSQ.19160.0
src/codemodules/face/iteratevideo/: frameprocessor.py
src/codemodules/face/pulse/: __init__.py  helpers_code.py  pulse.py  pulse_test_script copy.ipynb
src/codemodules/voice/intonation/: hubertrus.py  pos_neg_train.ipynb  posneg.py
src/codemodules/voice/pitch/: proto2.py
src/common/: utils.py
src/rzd_detector/: __init__.py
src/rzd_detector/codemodules/behaviour/clothes/: __init__.py  get_clothes.py  get_rating.py  сlothes_analyser.py
src/rzd_detector/codemodules/behaviour/deepanalyser/: chameleon.py  check.py
src/rzd_detector/codemodules/face/blinking/: __init__.py  get_blink_rate.py  rating.py
src/rzd_detector/codemodules/face/emotions/: main_em.py
src/rzd_detector/codemodules/face/pulse/: __init__.py  pulse.py
src/rzd_detector/codemodules/face/respiration/: __init__.py  get_resp.py
src/rzd_detector/codemodules/iterateframes/: __init__.py  frameprocessor.py  get_photos.py
src/rzd_detector/codemodules/stream/: __init__.py  crop_face.py  filter.py  filter_old.py  mainstream.py  webrtc_receiver.py  write.py
src/rzd_detector/codemodules/voice/: get_activity.py
src/rzd_detector/common/: graphics.py  utils.py
tests/: deep_fashion2_to_coco.py  frameprocessor_test.py  run_fashion_to_coco.py
upload/: cropped.avi
voice_module/intonation/: usage_example.ipynb
(+48 files in other folders)
