[build-system]
requires = ["flit", "Cython", "cython"]
build-backend = "flit_core.buildapi"

[project]
name = "rzd_detector"
version = "0.0.1"
description = """
    project for the "Transportation Engineers" competition for the qwerty team in the "Human Condition Detector" area.
"""
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cython",
    "lmfit",
    "numpy==1.23.*",
    "mediapipe",
    "plotly",
    "tqdm",
    "statsmodels>=0.13.1",
    "biosppy",
    "autorank",
    "tensorrt",
    "protobuf>=4.25.3",
    "pytest",
    "flask",
    "gunicorn",
    "imutils",
    "flask-cors",
    "aiortc",
    "tensorflow>=2.15.0",  # Более старые версии не поддерживают cuDNN 8.9
    "scikit-learn",
    "scikit-image",
    "scikit-posthocs",
    "torch",  #==2.3.0
    "torchaudio",
    "torchvision",
    "opencv-python",
    "onnxruntime",
    "nvidia-cudnn-cu12==8.9.*",
    # "PyAudio", 
    "jupyterplot",
    "webrtcvad",
    "sounddevice",
    "transformers",
    "accelerate",
    "dicttoxml",
    "xmltodict",
    "pycocotools @ git+https://github.com/abhi-kumar/cocoapi.git#egg=pycocotools&subdirectory=PythonAPI"
]
# authors = [{ name = "Timur Tunkin", email = "ch.houstone@zohomail.com" }]
# license = { file = "LICENSE" }

[tool.flit.module]
name = "src"