[tool.poetry]
name = "rzd_detector"
version = "0.0.1"
description = """project for the Transport Engineers competition for the qwerty team in the Human Detector area"""
readme = "README.md"
authors = ["Timur Tunkin <ch.houstone@zohomail.com>"]
license = "Artistic-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["detector", "competition", "team", "human"]
[tool.poetry.dependencies]
flask = "*"
flask-cors = "*"

[build-system]
requires = ["poetry-core", "cython", "Cython", "torch"]
build-backend = "poetry.core.masonry.api"

# post build hook
[tool.poe.poetry_hooks]
pre_install = "preinstall"
post_install = "postinstall"


[tool.poe.tasks.postinstall]
script = "Scripts.install_scripts.postinstall:run_postinstall"

[tool.poe.tasks.preinstall]
script = "Scripts.install_scripts.preinstall:run_preinstall"